2005-04-10  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/swfdec_sprite.c: (swfdec_sprite_render_iterate):
	Logging of frame numbers during render_iterate isn't WARNING material.

2005-04-10  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions_builtin.c: (mc_attachMovie), (mc_x_get),
	(mc_x_set), (mc_y_get), (mc_y_set), (movieclip_find):
	* libswfdec/swf.c:
	* libswfdec/swfdec_decoder.h:
	* libswfdec/swfdec_sprite.c: (swfdec_exports_lookup),
	(tag_func_export_assets):
	* libswfdec/swfdec_sprite.h:
	- Support ExportAssets, which is used in attachMovie to refer to sprites
	  by name.
	- Fill in MovieClip.attachMovie and add getters/setters for
	  MovieClip._x and _y.

2005-04-08  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/js/INTEGRATION:
	* libswfdec/js/jsprf.c:
	Use G_VA_COPY instead of looking for a define from elsewhere, partially
	fixing 64-bit builds.

2005-04-08  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions.c: (action_script_call),
	(swfdec_action_script_execute):
	* libswfdec/actions_builtin.c: (mc_play), (mc_stop),
	(mc_attachMovie), (movieclip_new), (movieclip_find),
	(swfdec_init_context_builtins), (action_register_sprite_seg):
	* libswfdec/actions_tags.c: (action_goto_frame),
	(action_next_frame), (action_previous_frame), (action_play),
	(action_stop), (action_call_function), (action_call_method):
	* libswfdec/js/jslibmath.h:
	* libswfdec/render.c: (tag_place_object_2):
	* libswfdec/swf.c: (swfdec_decoder_new), (swfdec_decoder_parse),
	(swfdec_decoder_free), (swf_parse_header2):
	* libswfdec/swfdec_actions.h:
	* libswfdec/swfdec_bits.c: (swfdec_bits_get_string):
	* libswfdec/swfdec_debug.c:
	* libswfdec/swfdec_decoder.h:
	* libswfdec/swfdec_font.c: (tag_func_define_font_2):
	* libswfdec/swfdec_render.c: (swfdec_render_iterate):
	* libswfdec/swfdec_sprite.c: (swfdec_sprite_render_iterate),
	(swfdec_sprite_render), (swfdec_spriteseg_dup),
	(swfdec_spriteseg_free), (swfdec_spriteseg_place_object_2):
	* libswfdec/swfdec_sprite.h: